k8s/prod/vs.yaml
---
# Virtual Service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: studio-ui
  labels:
    name: studio-ui
    project: blooprinted
    version: 'IMAGE_TAG'
    gitlab-job-id: "CI_JOB_ID"
spec:
  hosts:
    - studio.blooprinted.com
  gateways:
    - istio-system/blooprinted-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: studio-ui
